Fix parallelization